--- a/image-viewer-with-prev-and-next-buttons/demo.css
+++ b/image-viewer-with-prev-and-next-buttons/demo.css
@@ -20,7 +20,7 @@ article, header, section, aside, details, figcaption, figure, footer, header, hg
     display: block;
 }
 body {
-    background:#d8f3fa none repeat scroll 0 0;
+    background:#ffffff none repeat scroll 0 0;
     color: #222;
     font-size: 100%;
     line-height: 24px;
